Fix checkbox icon align

--- a/branding/css/spacewalk-fixes.less
+++ b/branding/css/spacewalk-fixes.less
@@ -20,3 +20,8 @@ input[type="file"].form-control {
 div.form-control {
     &:extend(.form-control[readonly]);
 }
+
+/* fix for checkbox icon alignment */
+div.checkbox.icon-wrapper i.fa {
+    width: .6em;
+}
